gitops/apps/workloads/whoami/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.local`)
      kind: Rule
      services:
        - name: whoami
          port: 80
